# worldRobotNews

./: README.md  pyproject.toml
.github/workflows/: daily_podcast.yml  maintain_feeds.yml
agents/: android.py  voice.py
config/: feed_health.json  podcast_meta.yml  sources.yml
docs/: feed.xml  index.html  seen_urls.txt
docs/episodes/: 2026-03-05_060912.srt  2026-03-06_061000.srt  2026-03-07_060743.srt  2026-03-10_060821.srt  2026-03-15_014252.srt  2026-03-15_061009.srt  2026-03-16_061027.srt  2026-03-17_061655.srt  2026-03-18_061618.srt  2026-03-19_063311.srt  2026-03-20_061451.srt  2026-03-20_124637.srt  2026-03-21_061120.srt  2026-03-22_060905.srt  2026-03-23_060932.srt  2026-03-24_061516.srt  2026-03-25_061617.srt  2026-03-26_061530.srt  2026-03-27_061248.srt  2026-03-28_061445.srt  2026-03-29_061051.srt  2026-03-30_061152.srt  2026-03-31_061844.srt  2026-04-01_061657.srt  2026-04-02_061937.srt  2026-04-03_061527.srt  2026-04-04_061354.srt  2026-04-05_061124.srt  2026-04-06_061107.srt
scripts/: maintain_feeds.py  publish_to_github.py
